<resources>
    <string name="app_name">MobileServices</string>
    <string name="write_a_review_about_your_device_repair">Write a review about your device repair</string>
    <string name="are_you_satisfied_with_our_service">Are you satisfied with our Service?</string>
    <string name="share_with_friends">If you are satisfied with our service please share with your friends</string>
    <string name="contact_us">Contact Us...! (+91-9xxxxxxxxx)</string>
    <string name="addressString">#plot no- 45, Sai Vikram Towers,
    Opposite : Metro Station, Kukatpally
    Hyderabad - 500072 </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_test_mobile">Mobile Number <font fgcolor='#FF0000'> * </font></string>
    <string name="hint_test_email">Email Id<font fgcolor='#FF0000'> * </font></string>
    <string name="password">password<font fgcolor='#FF0000'> * </font></string>
    <string-array name="array_name">
        <item>Array Item One</item>
        <item>Array Item Two</item>
        <item>Array Item Three</item>
    </string-array>
</resources>