<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gradient"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="Service Form"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="50dp"
            android:background="@drawable/shackground_shape_shade_color"
            android:paddingTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView4"
            app:layout_constraintVertical_bias="1.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="@drawable/background_oneside_radius_drawable">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginLeft="48dp"
                    android:layout_marginTop="48dp"
                    android:layout_marginEnd="48dp"
                    android:layout_marginRight="48dp"
                    android:text="@string/write_a_review_about_your_device_repair"
                    android:textColor="@color/textcolor"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginLeft="48dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="48dp"
                    android:layout_marginRight="48dp"
                    android:background="@drawable/borders_drawable"
                    android:gravity="start"
                    android:hint="Give Your review"
                    android:inputType="textMultiLine"
                    android:padding="8dp"
                    android:minHeight="150dp"
                    android:textColor="@color/black"
                    android:textColorHint="#BFB6B6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginLeft="48dp"
                    android:layout_marginTop="48dp"
                    android:layout_marginEnd="48dp"
                    android:layout_marginRight="48dp"
                    android:text="@string/are_you_satisfied_with_our_service"
                    android:textColor="@color/textcolor"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="48dp"
                    android:layout_marginLeft="48dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="48dp"
                    android:layout_marginRight="48dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:text="Yes"
                        android:textColor="@color/textcolor"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:buttonTint="@color/textcolor" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="No"
                        android:textColor="@color/textcolor"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:buttonTint="@color/textcolor" />
                </RadioGroup>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginLeft="48dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="48dp"
                    android:layout_marginRight="48dp"
                    android:text="@string/share_with_friends"
                    android:textColor="@color/textcolor"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/submitbutton_onseside_radius"
                    android:paddingHorizontal="64dp"
                    android:text="Submit"
                    android:textColor="@color/white"
                    app:backgroundTint="#13b6c7"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="#13b6c7"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/submitButton"
                    app:layout_constraintVertical_bias="1.0">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="@string/contact_us"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/contactWhatsappImageView"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:src="@drawable/whatsapp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/contactPhoneImageView"
                        app:layout_constraintTop_toBottomOf="@+id/textView5" />

                    <ImageView
                        android:id="@+id/contactPhoneImageView"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:src="@drawable/phone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView5" />

                    <View
                        android:id="@+id/view2"
                        android:layout_width="1dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginLeft="32dp"
                        android:background="@color/white"
                        app:layout_constraintBottom_toBottomOf="@+id/contactWhatsappImageView"
                        app:layout_constraintStart_toEndOf="@+id/contactWhatsappImageView"
                        app:layout_constraintTop_toTopOf="@+id/contactWhatsappImageView" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:gravity="center"
                        android:text="@string/addressString"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="@+id/view2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/view2"
                        app:layout_constraintTop_toTopOf="@+id/view2" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>